--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "http-status-codes": "^1.4.0",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
-    "koa-helmet": "^5.2.0"
+    "koa-helmet": "^5.2.0",
+    "pg": "^8.3.0",
+    "typeorm": "^0.2.25"
   },
   "devDependencies": {
     "@types/http-status-codes": "^1.2.0",
