--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@koa/router": "^9.3.1",
+    "@types/dotenv": "^8.2.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "http-status-codes": "^1.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-helmet": "^5.2.0",
@@ -20,7 +25,10 @@
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/http-status-codes": "^1.2.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/jwt-decode": "^2.2.1",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-helmet": "^5.2.0",
