--- a/package.json
+++ b/package.json
@@ -14,26 +14,36 @@
     "@koa/router": "^9.3.1",
     "@types/dotenv": "^8.2.0",
     "bcryptjs": "^2.4.3",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "http-status-codes": "^1.4.0",
+    "joi": "^17.2.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-connect": "^2.1.0",
+    "koa-csrf": "^3.0.8",
     "koa-helmet": "^5.2.0",
+    "koa-jwt": "^4.0.0",
+    "koa-yup-validator": "^1.0.7",
     "pg": "^8.3.0",
-    "typeorm": "^0.2.25"
+    "typeorm": "^0.2.25",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/csurf": "^1.9.36",
     "@types/http-status-codes": "^1.2.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-csrf": "^3.0.1",
     "@types/koa-helmet": "^5.2.0",
     "@types/koa__cors": "^3.0.1",
     "@types/koa__router": "^8.0.2",
+    "@types/yup": "^0.29.4",
     "nodemon": "^2.0.4"
   }
 }
