--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon dist/server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/GlebAO/koa-typescript-rest-server"
+  },
   "author": "Gleb Averyanov",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@koa/router": "^9.3.1",
