--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/server.js"
+    "start": "NODE_ENV='prod' node dist/server.js",
+    "dev": "NODE_ENV='dev' nodemon dist/server.js"
   },
   "repository": {
     "type": "git",
