--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "koa-yup-validator": "^1.0.7",
     "nodemailer": "^6.4.11",
     "pg": "^8.3.0",
+    "transliteration": "^2.1.11",
     "typeorm": "^0.2.25",
     "yup": "^0.29.3"
   },
@@ -51,6 +52,7 @@
     "@types/koa__cors": "^3.0.1",
     "@types/koa__router": "^8.0.2",
     "@types/nodemailer": "^6.4.0",
+    "@types/transliteration": "^1.6.6",
     "@types/yup": "^0.29.4",
     "nodemon": "^2.0.4"
   }
