--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV='prod' node dist/server.js",
-    "dev": "NODE_ENV='dev' nodemon dist/server.js"
+    "dev": "NODE_ENV='dev' nodemon dist/dev.server.js"
   },
   "repository": {
     "type": "git",
