--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "pg": "^8.3.0",
     "transliteration": "^2.1.11",
     "typeorm": "^0.2.25",
+    "xmlbuilder2": "^2.4.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
